
4.50  2013-10-20
  - Removed deprecated attrs method from Mojo::DOM.
  - Improved Mojo::Message to allow max_message_size check to be disabled.

4.49  2013-10-17
  - Added tls_ciphers option to Mojo::IOLoop::Server::listen.
  - Added ciphers parameter to Mojo::Server::Daemon::listen.
  - Removed experimental status from Mojolicioua::Validator.
  - Removed experimental status from Mojolicioua::Validator::Validation.
  - Removed experimental status from validation method in
    Mojolicious::Controller.
  - Removed experimental status from validator attribute in Mojolicious.
  - Removed experimental status from validation helper in
    Mojolicious::Plugin::DefaultHelpers.
  - Fixed parameter bug in Mojolicious::Validator::Validation.

4.48  2013-10-16
  - Fixed support for Net::SSLeay 1.55.

4.47  2013-10-15
  - Added dumper function to Mojo::Util.
  - Improved compatibility with IO::Socket::SSL 1.955.
  - Improved IIS compatibility of Mojo::Server::CGI.

4.46  2013-10-11
  - Changed default name for generated applications from MyMojoliciousApp to
    MyApp.
  - Improved performance of route matching in Mojolicious::Routes::Pattern.
  - Improved HTML Living Standard compliance of Mojo::DOM::HTML.

4.45  2013-10-06
  - Changed return values of validation checks in Mojolicious::Validator.
  - Fixed unquoted attribute selector bug in Mojo::DOM::CSS.

4.44  2013-10-04
  - Removed experimental status from label_for helper.
  - Renamed regex check in Mojolicious::Validator to like.

4.43  2013-10-02
  - Removed generators for dynamic error messages from Mojolicious::Validator.

4.42  2013-09-30
  - Added EXPERIMENTAL form validation support.
  - Added EXPERIMENTAL modules Mojolicious::Validator and
    Mojolicious::Validator::Validation.
  - Added EXPERIMENTAL validation method to Mojolicious::Controller.
  - Added EXPERIMENTAL validator attribute to Mojolicious.
  - Added EXPERIMENTAL label_for and validation helpers to
    Mojolicious::Plugin::DefaultHelpers.
