@@ -2,6 +2,7 @@
 4.50  2013-10-20
   - Removed deprecated attrs method from Mojo::DOM.
   - Improved Mojo::Message to allow max_message_size check to be disabled.
+  - Fixed small assignment bug in content helper.
 
 4.49  2013-10-17
   - Added tls_ciphers option to Mojo::IOLoop::Server::listen.
